--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask~=2.0.2
 Beautifulsoup4~=4.10.0
-requests
-phonenumbers
+requests~=2.26.0
+phonenumbers~=8.12.37
 gunicorn~=20.1.0
+psycopg2-binary~=2.9.2
