--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ requests~=2.26.0
 phonenumbers~=8.12.37
 gunicorn~=20.1.0
 psycopg2-binary~=2.9.2
+WTForms~=3.0.0
+Flask-WTF~=1.0.0
+Flask-Bootstrap~=3.3.7.1
