--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask~=2.0.2
-Flask-SQLAlchemy~=2.5.1
+# Flask-SQLAlchemy~=2.5.1
 Beautifulsoup4~=4.10.0
 requests~=2.26.0
 phonenumbers~=8.12.37
@@ -10,3 +10,4 @@ Flask-WTF~=1.0.0
 Flask-Bootstrap~=3.3.7.1
 Flask-Login~=0.5.0
 email-validator~=1.1.3
+SQLAlchemy~=1.4
