--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-Flask~=2.0.2
+Flask
 # Flask-SQLAlchemy~=2.5.1
-Beautifulsoup4~=4.10.0
-requests~=2.26.0
-phonenumbers~=8.12.37
-gunicorn~=20.1.0
-psycopg2-binary~=2.9.2
-WTForms~=3.0.0
-Flask-WTF~=1.0.0
-Flask-Bootstrap~=3.3.7.1
-Flask-Login~=0.5.0
-email-validator~=1.1.3
-SQLAlchemy~=1.4
-Werkzeug~=2.0.2
-python-dateutil~=2.8.2
+Beautifulsoup4
+requests
+phonenumbers
+# gunicorn~=20.1.0
+psycopg2-binary
+WTForms
+Flask-WTF
+Flask-Bootstrap
+Flask-Login
+email-validator
+SQLAlchemy
+Werkzeug
+python-dateutil
