--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-Flask
-# Flask-SQLAlchemy
-Beautifulsoup4
-requests
-phonenumbers
-gunicorn
-psycopg2-binary
-WTForms
-Flask-WTF
-Flask-Bootstrap
-Flask-Login
-email-validator
-SQLAlchemy
-Werkzeug
-python-dateutil
-pytest
+Flask~=2.0.2
+# Flask-SQLAlchemy~=2.5.1
+Beautifulsoup4~=4.10.0
+requests==2.27.1
+phonenumbers~=8.12.41
+gunicorn~=20.1.0
+psycopg2-binary~=2.9.2
+WTForms~=3.0.0
+Flask-WTF~=1.0.0
+Flask-Bootstrap~=3.3.7.1
+Flask-Login~=0.5.0
+email-validator~=1.1.3
+SQLAlchemy~=1.4
+Werkzeug~=2.0.2
+python-dateutil~=2.8.2
+pytest~=6.2.5
